# SEA-ME_Instrument-Cluster

./: Commands.md  README.md
GUI/: volt_gear.py
GUI/Instrument_Cluster/: CMakeLists.txt  Cluster.qml  Gear.qml  main.cpp
GUI/Instrument_Cluster_raspi/: BatteryNeedle.qml  BatteryNeedle.qml.save  BatteryNeedle_madmax.qml  CMakeLists.txt  Cluster.qml  Gear.qml  Main.qml  Main.qml.save  OneEuroFilter.js  OtherScreen.qml  SpeedNeedle.qml  SpeedNeedle.qml.save  SpeedNeedle_madmax.qml  canreader.cpp  canreader.h  main.cpp  resources.qrc  timeprovider.cpp  volt_gear.py  voltagereader.cpp  voltagereader.h
